2017-10-31

        * Bug fix version 1.4.3 released
        ================================

        Correct background interpolation in GCTACubeBackground::operator() (#2268)
        Correct GModelSpatialComposite::copy_members() bug.


2017-08-24

        * Bug fix version 1.4.2 released
        ================================

        Correct rate computation in GModelTemporalLightCurve::mc() (#2181)


2017-08-22

        * Bug fix version 1.4.1 released
        ================================

        Correct GModelSpectralNodes::mc() regression for energies outside the node energy range (#2179)


2017-07-28

        * Version 1.4.0 released
        =========================

        Add GCTAEventBin::ipix() and ieng() setter methods (#2171)
        Write response information into simulated observation definition file (#2170)
        Normalise phase curves by default (#2154, #2172)
        Support Python list slicing for container classes (#2128)
        Add Python typemaps for GObservation::likelihood() output argument (#2126)
        Add GSkyRegions::overlaps() and GSkyMap::overlaps() classes (#1980)


2017-07-06

        * Bug fix version 1.3.1 released
        ================================

        Add margin to maximum light and phase curve values (#2149)
        Improve caching in GSkyDir (#2148)
        Make GCTAPsfKing save against invalid values (#2133)


2017-06-06

        * Version 1.3.0 released
        =========================

        Add header card keyword map to GFitsHeader for fast access (#2120)
        Correct set names of spatial GLON/GLAT model parameters (#2113)
        Increase maximum CTA King PSF radius to 2 degrees (#2112)
        Support "BKG" as name of CTA background template
        Scale optimizer convergence criterion with step size (#2022)
        Put response cube loading and saving in OpenMP critical zone (#2021)
        Add GPhases class (#1996)
        Allow fitting of scale parameter in composite models (#1992)