@@ -4,7 +4,8 @@
         ================================
 
         Correct background interpolation in GCTACubeBackground::operator() (#2268)
-        Correct GModelSpatialComposite::copy_members() bug.
+        Fix OpenMP segfault issue when fetching CTA events (#2192)
+        Correct GModelSpatialComposite::copy_members() bug
 
 
 2017-08-24
